layout of website is ready almost if needed more things will be addded

--- a/index.html
+++ b/index.html
@@ -1,94 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/preloader.css">
-    <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/typewriter.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/preloader.css" />
+    <link rel="stylesheet" href="css/loader.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/typewriter.css" />
+  </head>
+  <body>
     <div class="preloader">
-        <img src="imgs/bashCraftLogo.png" alt="" class="pre-img">
+      <img src="imgs/bashCraftLogo.png" alt="" class="pre-img" />
     </div>
 
     <div class="loader">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
     </div>
 
     <header>
-        <nav>
-            <img src="imgs/bashCraftLogo.png" alt="">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#prev-events">Events</a></li>
-                <li><a href="#">Upcoming Events</a></li>
-
-            </ul>
-            <button class="btn login-btn">Login</button>
-        </nav>
+      <nav>
+        <img src="imgs/bashCraftLogo.png" alt="" />
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#prev-events">Previous Events</a></li>
+          <li><a href="#">Upcoming Events</a></li>
+        </ul>
+        <button class="btn login-btn">Login</button>
+      </nav>
     </header>
 
-
     <main>
-        <div class="intro">
-
-            <h1>Welcome To <span style="color: rgb(87, 241, 87);">BashCraft</span></h1>
-            <h2>No fluff; only Asli Engineering!!!</h2>
-            <div class="container">
-                <span style="color: #FFF1DB" class="text"></span>
-                <span style="color: rgb(87, 241, 87); font-weight: 1000;" class="blink">|</span>
-            </div>
-            <h3 class="desc">The place to collaborate,create and
-                push the boundaries of what's possible</h3>
-                <button class="btn join-us">Join Us Now &rarr;</button>
+      <div class="intro">
+        <h1>
+          Welcome To <span style="color: rgb(87, 241, 87)">BashCraft</span>
+        </h1>
+        <h2>No fluff; only Asli Engineering!!!</h2>
+        <div class="container">
+          <span style="color: #fff1db" class="text"></span>
+          <span style="color: rgb(87, 241, 87); font-weight: 1000" class="blink"
+            >|</span
+          >
         </div>
-
+        <h3 class="desc">
+          The place to collaborate,create and push the boundaries of what's
+          possible
+        </h3>
+        <button class="btn join-us">Join Us Now &rarr;</button>
+      </div>
     </main>
 
     <div class="container-2" id="prev-events">
-        <h2>Previous Events</h2>
-        <div class="timeline">
-            <div class="event left">
-                <h1>TechTalk with Arpit Bhayani</h1>
-                <img src="imgs/virtal_bhayani.png" alt="">
-                <p>Bashcraft recently hosted a captivating
-                    session with Arpit Bhayani, Google’s senior
-                    staff software engineer, diving deep into the
-                    latest tech trends and essential skills for
-                    future innovators. Attendees engaged in
-                    lively discussions about AI, software
-                    development, and the future of technology
-                    which sparked their curiosity in the everevolving tech landscape.
-                    </p>
-            </div>
-            <div class="event right">
-                <h1>Investathon</h1>
-                <img src="imgs/investathon.png" alt="">
-                <p>On March 26th, Bashcraft hosted an engaging finance
-                    event in collaboration with Zerodha, where
-                    participants learned to build personal portfolios and
-                    gained valuable financial insights. Following the
-                    workshop, attendees took part in an exciting Finance
-                    Hackathon, aimed at creating a finance platform
-                    from scratch. Participants faced UI/UX and
-                    development challenges, showcasing their skills and
-                    creativity while tackling real-world finance
-                    problems.
-                    
-                    </p>
-            </div>
+      <h2>Previous Events</h2>
+      <div class="timeline">
+        <div class="event left">
+          <h1>TechTalk with Arpit Bhayani</h1>
+          <img src="imgs/virtal_bhayani.png" alt="" />
+          <p>
+            Bashcraft recently hosted a captivating session with Arpit Bhayani,
+            Google’s senior staff software engineer, diving deep into the latest
+            tech trends and essential skills for future innovators. Attendees
+            engaged in lively discussions about AI, software development, and
+            the future of technology which sparked their curiosity in the
+            everevolving tech landscape.
+          </p>
         </div>
+        <div class="event right">
+          <h1>Investathon</h1>
+          <img src="imgs/investathon.png" alt="" />
+          <p>
+            On March 26th, Bashcraft hosted an engaging finance event in
+            collaboration with Zerodha, where participants learned to build
+            personal portfolios and gained valuable financial insights.
+            Following the workshop, attendees took part in an exciting Finance
+            Hackathon, aimed at creating a finance platform from scratch.
+            Participants faced UI/UX and development challenges, showcasing
+            their skills and creativity while tackling real-world finance
+            problems.
+          </p>
+        </div>
+        
+      </div>
     </div>
-</body>
-<script src="js/script.js"></script>
-<script src="js/typewriter.js"></script>
-<!-- <script src="js/loader.js"></script> -->
+
+    <div class="upcoming-events">
+      <h1>Upcoming Events</h1>
+      <div class="events">
+        <div class="event upcoming-left">
+          <h2>Event 1</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            possimus facere eius omnis, minus libero suscipit. Veniam dolorum
+            assumenda eos nesciunt consequuntur soluta tenetur recusandae
+            cupiditate libero. Iste aspernatur sequi beatae nihil velit saepe
+            eos repellat magnam placeat explicabo. Inventore neque ullam magni
+            alias, quasi dolorum consequatur tenetur quos nisi!
+          </p>
+        </div>
+        <div class="event upcoming-right">
+          <h2>Event 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            possimus facere eius omnis, minus libero suscipit. Veniam dolorum
+            assumenda eos nesciunt consequuntur soluta tenetur recusandae
+            cupiditate libero. Iste aspernatur sequi beatae nihil velit saepe
+            eos repellat magnam placeat explicabo. Inventore neque ullam magni
+            alias, quasi dolorum consequatur tenetur quos nisi!
+          </p>
+        </div>
+        <div class="event upcoming-left">
+            <h2>Event 3</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              possimus facere eius omnis, minus libero suscipit. Veniam dolorum
+              assumenda eos nesciunt consequuntur soluta tenetur recusandae
+              cupiditate libero. Iste aspernatur sequi beatae nihil velit saepe
+              eos repellat magnam placeat explicabo. Inventore neque ullam magni
+              alias, quasi dolorum consequatur tenetur quos nisi!
+            </p>
+          </div>
+      </div>
+    </div>
+  </body>
+  <script defer src="js/script.js"></script>
+  <script defer src="js/typewriter.js"></script>
+  <!-- <script src="js/loader.js"></script> -->
 </html>
