--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/typewriter.css" />
+    <link rel="stylesheet" href="css/footer.css">
   </head>
   <body>
     <div class="preloader">
@@ -29,7 +30,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#prev-events">Previous Events</a></li>
-          <li><a href="#">Upcoming Events</a></li>
+          <li><a href="#up-events">Upcoming Events</a></li>
         </ul>
         <button class="btn login-btn">Login</button>
       </nav>
@@ -88,10 +89,11 @@
       </div>
     </div>
 
-    <div class="upcoming-events">
+    <div class="upcoming-events" id="up-events">
       <h1>Upcoming Events</h1>
       <div class="events">
         <div class="event upcoming-left">
+          <img src="imgs/BLogo.png" alt="">
           <h2>Event 1</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
@@ -103,6 +105,7 @@
           </p>
         </div>
         <div class="event upcoming-right">
+          <img src="imgs/BLogo.png" alt="">
           <h2>Event 2</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
@@ -114,6 +117,7 @@
           </p>
         </div>
         <div class="event upcoming-left">
+          <img src="imgs/BLogo.png" alt="">
             <h2>Event 3</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
@@ -126,8 +130,22 @@
           </div>
       </div>
     </div>
+
+    <footer>
+      <div class="footer">
+        <img src="imgs/bashCraftLogo.png" alt="">
+        <div class="icons">
+          <a target="_blank" href="https://www.instagram.com/mayank_a_05?utm_source=qr&igsh=MW1qa2tsc2VjdTM1OQ=="><i class="fa-brands fa-instagram insta"></i></a>
+          </a><i class="fa-brands fa-x-twitter x"></i>
+          <a target="_blank" href="https://www.linkedin.com/in/mayank-arora-336256320/"><i class="fa-brands fa-linkedin linkedin"></i></a>
+          <a target="_blank" href="https://github.com/MayankA25"><i class="fa-brands fa-github github"></i></a>
+        </div>
+        
+      </div>
+    </footer>
   </body>
   <script defer src="js/script.js"></script>
   <script defer src="js/typewriter.js"></script>
   <!-- <script src="js/loader.js"></script> -->
+  <script src="https://kit.fontawesome.com/0a5c66c5f1.js" crossorigin="anonymous"></script>
 </html>
