--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/typewriter.css" />
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responcive.css">
   </head>
   <body>
     <div class="preloader">
       <img src="imgs/bashCraftLogo.png" alt="" class="pre-img" />
     </div>
 
+    
+    
+
+    <header>
+      <nav>
+        <img src="imgs/bashCraftLogo.png" alt="" />
+        <!-- <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#prev-events">Previous Events</a></li>
+          <li><a href="#up-events">Upcoming Events</a></li>
+        </ul> -->
+        <button class="btn login-btn">Login</button>
+      </nav>
+    </header>
     <div class="loader">
       <div class="bar"></div>
       <div class="bar"></div>
@@ -22,19 +37,6 @@
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
-    </div>
-
-    <header>
-      <nav>
-        <img src="imgs/bashCraftLogo.png" alt="" />
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#prev-events">Previous Events</a></li>
-          <li><a href="#up-events">Upcoming Events</a></li>
-        </ul>
-        <button class="btn login-btn">Login</button>
-      </nav>
-    </header>
 
     <main>
       <div class="intro">
@@ -55,6 +57,7 @@
         <button class="btn join-us">Join Us Now &rarr;</button>
       </div>
     </main>
+  </div>
 
     <div class="container-2" id="prev-events">
       <h2>Previous Events</h2>
@@ -148,4 +151,5 @@
   <script defer src="js/typewriter.js"></script>
   <!-- <script src="js/loader.js"></script> -->
   <script src="https://kit.fontawesome.com/0a5c66c5f1.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script> -->
 </html>
