issues related to responsiveness resolved AOS library removed

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 
     <footer>
       <div class="footer">
-        <img data-aos="fade-right" data-aos-delay="200" src="imgs/bashCraftLogo.png" alt="">
+        <img src="imgs/bashCraftLogo.png" alt="">
         <div class="icons">
-          <a data-aos="fade-up" data-aos-delay="200" target="_blank" href="https://www.instagram.com/mayank_a_05?utm_source=qr&igsh=MW1qa2tsc2VjdTM1OQ=="><i class="fa-brands fa-instagram insta"></i></a>
-          <a data-aos="fade-up" data-aos-delay="300" href=""><i class="fa-brands fa-x-twitter x"></i></a>
-          <a data-aos="fade-up" data-aos-delay="400" target="_blank" href="https://www.linkedin.com/in/mayank-arora-336256320/"><i class="fa-brands fa-linkedin linkedin"></i></a>
-          <a data-aos="fade-up" data-aos-delay="500" target="_blank" href="https://github.com/MayankA25"><i class="fa-brands fa-github github"></i></a>
+          <a target="_blank" href="https://www.instagram.com/mayank_a_05?utm_source=qr&igsh=MW1qa2tsc2VjdTM1OQ=="><i class="fa-brands fa-instagram insta"></i></a>
+          <a href=""><i class="fa-brands fa-x-twitter x"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/mayank-arora-336256320/"><i class="fa-brands fa-linkedin linkedin"></i></a>
+          <a target="_blank" href="https://github.com/MayankA25"><i class="fa-brands fa-github github"></i></a>
         </div>
         
       </div>
