--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BashCraft-</title>
+    <title>AI Club-</title>
     <link rel="icon" type="image/x-icon" href="imgs/ai-club-logo.png">
     <link rel="stylesheet" href="css/preloader.css" />
     <link rel="stylesheet" href="css/loader.css" />
